Dibuat menggunakan Colab

--- a/Cohort Analysis/E_commerce_Cohort_Analysis.ipynb
+++ b/Cohort Analysis/E_commerce_Cohort_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0cpdwg66YS1N7Bv1h3nBU",
+      "authorship_tag": "ABX9TyO1HBZzky6rVL2+k52BAbpg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/adlathifa/Customer_Lifecycle_Analytics/blob/main/E_commerce_Cohort_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/adlathifa/Customer_Lifecycle_Analytics/blob/main/Cohort%20Analysis/E_commerce_Cohort_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,7 +87,7 @@
         "id": "7gfl6OsR8qrx",
         "outputId": "7a644729-b0ad-4690-e7ac-8edccbc2bd7e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "3H1yMG788qvB"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "zUNIMV208qyY"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
         "id": "UyAKhQl58q1k",
         "outputId": "6238fe6f-5bea-4ae7-f9ba-de10074868ce"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +314,7 @@
         "id": "4HZzopC6SPw2",
         "outputId": "06b40690-a768-40f4-a2de-6c7b2bcf5dd5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +669,7 @@
       "metadata": {
         "id": "RFFRf7KgRCZh"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -692,7 +692,7 @@
         "id": "CShVIbfcXgE-",
         "outputId": "c1d7ba9c-1075-41ae-fde7-b920ac35fc87"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1113,7 +1113,7 @@
         },
         "outputId": "a9c0370e-fa41-40cf-96e2-153398132d3e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1522,7 +1522,7 @@
         "id": "G2bnQDvgUCUJ",
         "outputId": "9c007443-749f-4763-dc1d-d01142edad67"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2083,7 +2083,7 @@
         "id": "z6OBbzuUZ0lh",
         "outputId": "f109b2a8-5035-4fc9-df35-80c3298cbd6c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2204,7 +2204,7 @@
         "id": "HB6li6YAaZso",
         "outputId": "59781b84-7d24-4500-b530-c2089fb57909"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2769,7 +2769,7 @@
         "id": "qWR0e8lxcb8K",
         "outputId": "e01c370b-6efa-4e25-9bca-b31b98399ea1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2802,7 +2802,7 @@
         "id": "BRPkWQvZyAQZ",
         "outputId": "f7c93156-b55c-4ee6-a085-a879199849ca"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2872,7 +2872,7 @@
         "id": "8U3JCgc1vaXw",
         "outputId": "a11c3c80-5baa-4285-81d2-8a7518d6590d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3532,7 +3532,7 @@
         "id": "p6Ut4akf1evz",
         "outputId": "9ab946b2-a62e-4483-83ba-64ede27e370e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3968,7 +3968,7 @@
         "id": "LDyilkKF4Mjx",
         "outputId": "0e2a4e8c-0680-467f-e85a-6b1914c2f14d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4535,7 +4535,7 @@
         "# Create a heatmap to visualize customer nett revenue by cohort over time\n",
         "plt.figure(figsize=(12,8))\n",
         "ax = sns.heatmap(Nett_Revenue_Cohort, annot=True, fmt='.0f', cmap='Purples', cbar_kws={'format': '$%dk'})\n",
-        "plt.title('Customer Nett Revenue by Cohort')\n",
+        "plt.title('Net Revenue by Cohort')\n",
         "plt.xlabel('Month Since First Purchase')\n",
         "plt.ylabel('Cohort Month')\n",
         "\n",
@@ -4556,7 +4556,7 @@
         "id": "8V_BHNyc4Mtm",
         "outputId": "4bcf057b-609c-4dd4-e1fd-bd6294a940b7"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
